--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@algolia/autocomplete-js": "^1.7.1",
     "@fontsource/source-serif-pro": "^4.5.0",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
@@ -12,10 +13,12 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "abcjs": "^5.12.0",
+    "algoliasearch": "^4.14.2",
     "firebase": "^8.7.0",
     "firebaseui": "^4.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-instantsearch-hooks-web": "^6.36.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
